Should reject invalid dates constructed with multiple fields UI https://bugs.webkit.org/show_bug.cgi?id=98727

Reviewed by Hajime Morita.

Source/WebCore:

In input[type=date] with multiple fields UI, we allow users to set
day-of-month value to 1-31 regardless of the month value. So users can
construct an invalid date such as "2012-02-31". We should sanitize such
values.

This change affects platforms with ENABLE_INPUT_TYPE_DATE &&
ENABLE_INPUT_MULTIPLE_FIELDS_UI.

Test: fast/forms/date-multiple-fields/date-multiple-fields-keyboard-events.html

* html/BaseDateAndTimeInputType.h:
(BaseDateAndTimeInputType): Make sanitizeValue protected to be called from
BaseMultipleFieldsDateAndTimeInputType.
* html/BaseMultipleFieldsDateAndTimeInputType.cpp:
(WebCore::BaseMultipleFieldsDateAndTimeInputType::editControlValueChanged):
Apply sanitizeValue to a value constructed in UI.
(WebCore::BaseMultipleFieldsDateAndTimeInputType::restoreFormControlState):
Ditto.

LayoutTests:

* fast/forms/date-multiple-fields/date-multiple-fields-keyboard-events-expected.txt: Added.
* fast/forms/date-multiple-fields/date-multiple-fields-keyboard-events.html: Added.
* fast/forms/month-multiple-fields/month-multiple-fields-keyboard-events-expected.txt:
* fast/forms/month-multiple-fields/month-multiple-fields-keyboard-events.html:
  Updated the test. 275760-12 is not a valid month value.

Canonical link: https://commits.webkit.org/116819@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130835 268f45cc-cd09-0410-ab3c-d52691b4dbfc